# spotRiver

./: .gitignore  404.html  LICENSE  MANIFEST.in  README.md  examples.html  index.html  makeRiver.sh  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml  tox.ini
.github/workflows/: test.yml
about/: index.html
docs/: examples.md
download/: index.html
examples/: index.html
gui/: spotRiverGUI.py
hyperparameter-tuning-cookbook/: index.html
notebooks/: 00_spot.ipynb  00_spotriver_hw.ipynb  00_tests.ipynb  01_a_spotriver_nowcasting.ipynb  01_spotriver_nowcasting.ipynb  01_spotriver_snarimax.ipynb  02_spotriver_hw.ipynb  02_spotriver_nowcasting.ipynb  02_spotriver_snarimax_generic.ipynb  03_spotriver_eval.ipynb  03_spotriver_snarimax_generic.ipynb  04_spotriver_htr_generic.ipynb  06_spotriver_htr_generic_num.ipynb  07_spotriver_htr_generic_num_production.ipynb  09_spotriver_htr_generic_num_long.ipynb  10_spotriver_htr_generic_num_weighted.ipynb  11_spotriver_htr_generic_num_weighted_2.ipynb  12_spotriver_htr_generic_num_weighted.ipynb  13_spotriver_htr_generic_num_weighted.ipynb  14_spotriver_htr_synth_weighted.ipynb  15_spotriver_htr_synth_weighted_long.ipynb  16_spotriver_htr_synth_weighted_long.ipynb  17_spotriver_htr_synth_weighted_long.ipynb  18_spotriver_htr_synth_weighted_long.ipynb  19_spotriver_htr_synth_weighted_long.ipynb  21_spotriver_htr_synth_weighted_long.ipynb  25_spotriver_htr_synth_weighted_long.ipynb  26_spotriver_htr_synth_1e6_weighted_long.ipynb  27_spotriver_htr_synth_1e6_weighted_long.ipynb  28_spotriver_htr_synth_1e6_weighted_long.ipynb  29_spotriver_htr_synth_1e6_weighted_long.ipynb  30_spotriver_htr_synth_1e6_weighted_long.ipynb  33_spotriver_htr_synth_1e6_weighted_long.ipynb  bike_sharing_demand_preprocessing.ipynb  error_04_spotriver_htr_generic.ipynb  river_hyper_dict.json  test_024_spot_hpt_river_friedman_hatr.ipynb
notebooks/userModel/: river_hyper_dict.json
reference/SUMMARY/: index.html
reference/spotRiver/data/: index.html
search/: search_index.json
src/spotRiver/data/: __init__.py  airline_passengers.py  base.py  bike_sharing.py  csvdataset.py  generic.py  opm.py  river_hyper_dict.json  river_hyper_dict.py  selector.py
src/spotRiver/drift/: drift_generator.py
src/spotRiver/evaluation/: eval_bml.py  eval_nowcast.py  eval_oml.py
src/spotRiver/fun/: hyperriver.py  hyperriver_old.py
src/spotRiver/hyperdict/: river_hyper_dict.json  river_hyper_dict.py
src/spotRiver/plot/: stats.py
test/: test_bml.py  test_data_selector.py  test_eval_bml.py  test_features.py  test_hyperriver.py  test_river_data.py
(+30 files in other folders)
