[build-system]
requires = [
  "setuptools>=61.0",
  "setuptools_scm[toml]",
]
build-backend = "setuptools.build_meta"

[project]
name = "spotRiver"
authors = [
  { name="T. Bartz-Beielstein", email="tbb@bartzundbartz.de" }
]
description = "spotRiver - Sequential Parameter Optimization Interface to River"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Operating System :: OS Independent",
]
dependencies = [
  "numpy",
  "river >= 0.15.0",
  "pytest [tests]",
  "spotPython [docs] >= 0.0.2",
]
dynamic=["version"]

[project.urls]
"Homepage" = "https://www.spotseven.de"
Issues = "https://github.com/sequential-parameter-optimization/spotRiver/issues"
Repository = "https://github.com/sequential-parameter-optimization/spotRiver"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 120
target-version = ["py310"]

[tool.setuptools_scm]
write_to = "src/spotRiver/_version.py"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
